--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,18 @@
             "args": [
                 "${command:pickArgs}"
             ]
-        }
+        },
+        {
+            "name": "Llama3 from huggingface",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "justMyCode": false,
+            "console": "integratedTerminal",
+            "args": [
+                "llama3", "--parallel", "--max-new-tokens", "1000"
+            ]
+        },
+
     ]
 }
