Final prompt changes and NLU Evaluation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,17 @@
                 "llama3", "--parallel"
             ]
         },
+        {
+            "name": "ollama eval",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "justMyCode": false,
+            "console": "integratedTerminal",
+            "args": [
+                "ollama", "--eval"
+            ]
+        },
 
     ]
 }
